fixing modal padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -636,6 +636,11 @@ section {
   padding: 0 5rem;
   text-align: justify;
 }
+@media screen and (max-width: 768px) {
+  .modal-content {
+    padding: 0 1rem;
+  }
+}
 
 .modal-header {
   border: none;
